Spelling. ISpector to INspector

--- a/Custom.css
+++ b/Custom.css
@@ -91,7 +91,7 @@ button.status-bar-item.toggled-on .glyph {
 #-webkit-web-inspector .toolbar-icon {
 	display: block;
 }
-#-webkit-web-ispector  .toolbar-item {
+#-webkit-web-inspector  .toolbar-item {
 	height: 37px !important;
 }
 
