--- a/Custom.css
+++ b/Custom.css
@@ -801,6 +801,7 @@ body.drawer-visible #drawer {
 	color: #96cbfe !important;
 }
 
+#-webkit-web-inspector .styles-section.matched-styles .properties li.parent .expand-element,
 #-webkit-web-inspector #console-messages .console-group-messages .section .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent::before,
 #-webkit-web-inspector .outline-disclosure li.parent::before {
@@ -817,6 +818,7 @@ body.drawer-visible #drawer {
 	background-color: inherit !important;
 }
 
+#-webkit-web-inspector .styles-section.matched-styles .properties li.parent.expanded .expand-element,
 #-webkit-web-inspector #console-messages .console-group-messages .section.expanded .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent.expanded::before,
 #-webkit-web-inspector .outline-disclosure li.parent.expanded::before {
