--- a/Custom.css
+++ b/Custom.css
@@ -633,12 +633,14 @@ button.status-bar-item.toggled-on .glyph {
 
 /* Add drop down arrows to Event Listeners */
 #-webkit-web-inspector .section.expanded .header::before,
-#-webkit-web-inspector .event-bars .event-bar.expanded .header::before {
+#-webkit-web-inspector .event-bars .event-bar.expanded .header::before,
+#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent.expanded::before {
 	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
 }
 
 #-webkit-web-inspector .section .header::before,
-#-webkit-web-inspector .event-bars .event-bar .header::before {
+#-webkit-web-inspector .event-bars .event-bar .header::before,
+#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent::before {
 	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
 }
 
@@ -736,6 +738,15 @@ body.drawer-visible #drawer {
 	background: #333 !important;
 	border-right: 1px solid #222 !important;
 	color: #999 !important;
+}
+
+#-webkit-web-inspector .breakpoint-list li {
+	color: #e6da83 !important;
+}
+
+#-webkit-web-inspector .sidebar-pane > .body .info,
+#-webkit-web-inspector .sidebar-label {
+	color: #AAA !important;
 }
 
 /**********************************************/
