--- a/Custom.css
+++ b/Custom.css
@@ -641,13 +641,13 @@
 /* Add drop down arrows to Event Listeners */
 #-webkit-web-inspector .section.expanded .header::before,
 #-webkit-web-inspector .event-bars .event-bar.expanded .header::before,
-#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent.expanded::before {
+#-webkit-web-inspector .properties-tree li.parent.expanded::before {
 	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
 }
 
 #-webkit-web-inspector .section .header::before,
 #-webkit-web-inspector .event-bars .event-bar .header::before,
-#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent::before {
+#-webkit-web-inspector .properties-tree li.parent::before {
 	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
 }
 
@@ -738,7 +738,7 @@
 }
 
 #-webkit-web-inspector .outline-disclosure > ol .source-code {
-	color: #000 !important;
+	color: #999 !important; /* Fixes Network > Headers */
 }
 
 #-webkit-web-inspector #drawer-contents .webkit-line-number {
@@ -905,6 +905,11 @@
 
 #-webkit-web-inspector .data-grid table {
 	color: white !important;
+	background: #222 !important;
+}
+
+#-webkit-web-inspector .data-grid table.data tr.revealed:nth-child(odd) {
+	background: #292929 !important; /* Zebra stripe Network > Cookies */
 }
 
 #-webkit-web-inspector .network-graph-bar,
