--- a/Canary/Custom.css
+++ b/Canary/Custom.css
@@ -653,14 +653,14 @@
 #-webkit-web-inspector .event-bars .event-bar.expanded .header::before,
 #-webkit-web-inspector .section .properties-tree li.parent.expanded::before,
 #-webkit-web-inspector .computed-style .properties-tree li.parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 #-webkit-web-inspector .section .header::before,
 #-webkit-web-inspector .event-bars .event-bar .header::before,
 #-webkit-web-inspector .section .properties-tree li.parent::before,
 #-webkit-web-inspector .computed-style .properties-tree li.parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
 }
 
 /* Network */
@@ -970,13 +970,13 @@
 }
 
 #-webkit-web-inspector #elements-content .parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
 	position: relative;
 	z-index: 999;
 }
 
 #-webkit-web-inspector #elements-content .parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 #-webkit-web-inspector .styles-element-state-pane {
